[tool.poetry]
name = "data-science-playbooks"
version = "0.1.0"
description = "Some small fun examples."
authors = ["Benjamin Holzknecht <benjamin.holzknecht@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.4.3"
scipy = "^1.9.0"
numpy = "^1.23.2"
featuretools = "^1.13.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
